# Sheet2DB

./: .gitignore  README.md  app.py  backend.py  dados_corretos.xlsx  dados_incorretos.xlsx  frontend.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: dados_corretos.csv  dados_incorretos.csv
docs/: .excalidraw  MVC_ARCHITECTURE.md
src/: app.py  backend.py  contract.py  frontend.py  main.py  schema.py
src/controller/: pipeline_controller.py
src/exceptions/: validation.py
src/model/: base_classes.py  csv_reader.py  deleter.py  excel_reader.py  interfaces.py  loader.py  loaders.py  pandera_validator.py  postgres_deleter.py  postgres_loader.py  postgres_reader.py  reader.py  readers.py  schema.py  transformer.py  validator.py  validators.py
src/utils/: config.py  schema.py
src/view/: web_ui.py
src/view/components/: dashboard.py  data_view.py  delete_form.py  header.py  home.py  insert.py  insert_form.py  manage.py  navigate.py  navigation.py  navigator.py  upload_file.py  upload_options.py  uploader.py  view.py
tests/: test_contract.py  test_schema.py
