[project]
name = "sheet2db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pandera>=0.27.0",
    "psycopg2-binary>=2.9.11",
    "python-calamine>=0.6.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "streamlit[charts]>=1.51.0",
]
